LSLParser.py
# Generated from LSL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class LSLParser ( Parser ):

    grammarFileName = "LSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'state_entry'", "'state_exit'", "'touch_start'", 
                     "'touch'", "'touch_end'", "'collision_start'", "'collision'", 
                     "'collision_end'", "'timer'", "'listen'", "'sensor'", 
                     "'no_sensor'", "'control'", "'at_target'", "'not_at_target'", 
                     "'at_rot_target'", "'not_at_rot_target'", "'money'", 
                     "'email'", "'run_time_permissions'", "'changed'", "'attach'", 
                     "'dataserver'", "'moving_start'", "'moving_end'", "'object_rez'", 
                     "'remote_data'", "'http_response'", "'link_message'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'<<'", 
                     "'>>'", "'integer'", "'float'", "'string'", "'key'", 
                     "'vector'", "'rotation'", "'list'", "'void'", "'default'", 
                     "'state'", "'if'", "'else'", "'while'", "'do'", "'for'", 
                     "'return'", "'jump'", "'break'", "'continue'", "'TRUE'", 
                     "'FALSE'", "'NULL_KEY'", "'='", "'+='", "'-='", "'*='", 
                     "'/='", "'%='", "'||'", "'&&'", "'|'", "'^'", "'&'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!'", "'~'", "'++'", "'--'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
                     "'.'", "'?'", "':'", "'@'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INTEGER_TYPE", "FLOAT_TYPE", 
                      "STRING_TYPE", "KEY_TYPE", "VECTOR_TYPE", "ROTATION_TYPE", 
                      "LIST_TYPE", "VOID_TYPE", "DEFAULT", "STATE", "IF", 
                      "ELSE", "WHILE", "DO", "FOR", "RETURN", "JUMP", "BREAK", 
                      "CONTINUE", "TRUE", "FALSE", "NULL_KEY", "ASSIGN", 
                      "PLUS_ASSIGN", "MINUS_ASSIGN", "MULT_ASSIGN", "DIV_ASSIGN", 
                      "MOD_ASSIGN", "LOGICAL_OR", "LOGICAL_AND", "BITWISE_OR", 
                      "BITWISE_XOR", "BITWISE_AND", "EQUALITY", "RELATIONAL", 
                      "SHIFT", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", 
                      "LOGICAL_NOT", "BITWISE_NOT", "INCREMENT", "DECREMENT", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
                      "RBRACKET", "SEMICOLON", "COMMA", "DOT", "QUESTION", 
                      "COLON", "AT", "INTEGER", "FLOAT", "STRING", "KEY", 
                      "IDENTIFIER", "COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_script = 0
    RULE_globalDeclaration = 1
    RULE_functionDefinition = 2
    RULE_returnType = 3
    RULE_parameterList = 4
    RULE_parameter = 5
    RULE_stateDefinition = 6
    RULE_eventHandler = 7
    RULE_eventName = 8
    RULE_statement = 9
    RULE_breakStatement = 10
    RULE_continueStatement = 11
    RULE_variableDeclaration = 12
    RULE_assignmentStatement = 13
    RULE_expressionStatement = 14
    RULE_ifStatement = 15
    RULE_whileStatement = 16
    RULE_doWhileStatement = 17
    RULE_forStatement = 18
    RULE_returnStatement = 19
    RULE_stateChangeStatement = 20
    RULE_jumpStatement = 21
    RULE_labelStatement = 22
    RULE_compoundStatement = 23
    RULE_lvalue = 24
    RULE_assignmentOperator = 25
    RULE_expression = 26
    RULE_assignmentExpression = 27
    RULE_conditionalExpression = 28
    RULE_logicalOrExpression = 29
    RULE_logicalAndExpression = 30
    RULE_bitwiseOrExpression = 31
    RULE_bitwiseXorExpression = 32
    RULE_bitwiseAndExpression = 33
    RULE_equalityExpression = 34
    RULE_relationalExpression = 35
    RULE_shiftExpression = 36
    RULE_additiveExpression = 37
    RULE_multiplicativeExpression = 38
    RULE_unaryExpression = 39
    RULE_postfixExpression = 40
    RULE_postfixOperator = 41
    RULE_primaryExpression = 42
    RULE_functionCall = 43
    RULE_argumentList = 44
    RULE_literal = 45
    RULE_vectorLiteral = 46
    RULE_rotationLiteral = 47
    RULE_listLiteral = 48
    RULE_listElement = 49
    RULE_lslType = 50

    ruleNames =  [ "script", "globalDeclaration", "functionDefinition", 
                   "returnType", "parameterList", "parameter", "stateDefinition", 
                   "eventHandler", "eventName", "statement", "breakStatement", 
                   "continueStatement", "variableDeclaration", "assignmentStatement", 
                   "expressionStatement", "ifStatement", "whileStatement", 
                   "doWhileStatement", "forStatement", "returnStatement", 
                   "stateChangeStatement", "jumpStatement", "labelStatement", 
                   "compoundStatement", "lvalue", "assignmentOperator", 
                   "expression", "assignmentExpression", "conditionalExpression", 
                   "logicalOrExpression", "logicalAndExpression", "bitwiseOrExpression", 
                   "bitwiseXorExpression", "bitwiseAndExpression", "equalityExpression", 
                   "relationalExpression", "shiftExpression", "additiveExpression", 
                   "multiplicativeExpression", "unaryExpression", "postfixExpression", 
                   "postfixOperator", "primaryExpression", "functionCall", 
                   "argumentList", "literal", "vectorLiteral", "rotationLiteral", 
                   "listLiteral", "listElement", "lslType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    INTEGER_TYPE=38
    FLOAT_TYPE=39
    STRING_TYPE=40
    KEY_TYPE=41
    VECTOR_TYPE=42
    ROTATION_TYPE=43
    LIST_TYPE=44
    VOID_TYPE=45
    DEFAULT=46
    STATE=47
    IF=48
    ELSE=49
    WHILE=50
    DO=51
    FOR=52
    RETURN=53
    JUMP=54
    BREAK=55
    CONTINUE=56
    TRUE=57
    FALSE=58
    NULL_KEY=59
    ASSIGN=60
    PLUS_ASSIGN=61
    MINUS_ASSIGN=62
    MULT_ASSIGN=63
    DIV_ASSIGN=64
    MOD_ASSIGN=65
    LOGICAL_OR=66
    LOGICAL_AND=67
    BITWISE_OR=68
    BITWISE_XOR=69
    BITWISE_AND=70
    EQUALITY=71
    RELATIONAL=72
    SHIFT=73
    PLUS=74
    MINUS=75
    MULTIPLY=76
    DIVIDE=77
    MODULO=78
    LOGICAL_NOT=79
    BITWISE_NOT=80
    INCREMENT=81
    DECREMENT=82
    LPAREN=83
    RPAREN=84
    LBRACE=85
    RBRACE=86
    LBRACKET=87
    RBRACKET=88
    SEMICOLON=89
    COMMA=90
    DOT=91
    QUESTION=92
    COLON=93
    AT=94
    INTEGER=95
    FLOAT=96
    STRING=97
    KEY=98
    IDENTIFIER=99
    COMMENT=100
    BLOCK_COMMENT=101
    WS=102

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def globalDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LSLParser.GlobalDeclarationContext)
            else:
                return self.getTypedRuleContext(LSLParser.GlobalDeclarationContext,i)


        def functionDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LSLParser.FunctionDefinitionContext)
            else:
                return self.getTypedRuleContext(LSLParser.FunctionDefinitionContext,i)


        def stateDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LSLParser.StateDefinitionContext)
            else:
                return self.getTypedRuleContext(LSLParser.StateDefinitionContext,i)


        def getRuleIndex(self):
            return LSLParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScript" ):
                return visitor.visitScript(self)
            else:
                return visitor.visitChildren(self)




    def script(self):

        localctx = LSLParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 38)) & ~0x3f) == 0 and ((1 << (_la - 38)) & ((1 << (LSLParser.INTEGER_TYPE - 38)) | (1 << (LSLParser.FLOAT_TYPE - 38)) | (1 << (LSLParser.STRING_TYPE - 38)) | (1 << (LSLParser.KEY_TYPE - 38)) | (1 << (LSLParser.VECTOR_TYPE - 38)) | (1 << (LSLParser.ROTATION_TYPE - 38)) | (1 << (LSLParser.LIST_TYPE - 38)) | (1 << (LSLParser.VOID_TYPE - 38)) | (1 << (LSLParser.DEFAULT - 38)) | (1 << (LSLParser.STATE - 38)) | (1 << (LSLParser.IDENTIFIER - 38)))) != 0):
                self.state = 105
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 102
                    self.globalDeclaration()
                    pass

                elif la_ == 2:
                    self.state = 103
                    self.functionDefinition()
                    pass

                elif la_ == 3:
                    self.state = 104
                    self.stateDefinition()
                    pass


                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GlobalDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lslType(self):
            return self.getTypedRuleContext(LSLParser.LslTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(LSLParser.IDENTIFIER, 0)

        def SEMICOLON(self):
            return self.getToken(LSLParser.SEMICOLON, 0)

        def ASSIGN(self):
            return self.getToken(LSLParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(LSLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LSLParser.RULE_globalDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalDeclaration" ):
                listener.enterGlobalDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalDeclaration" ):
                listener.exitGlobalDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalDeclaration" ):
                return visitor.visitGlobalDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def globalDeclaration(self):

        localctx = LSLParser.GlobalDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_globalDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.lslType()
            self.state = 111
            self.match(LSLParser.IDENTIFIER)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LSLParser.ASSIGN:
                self.state = 112
                self.match(LSLParser.ASSIGN)
                self.state = 113
                self.expression()


            self.state = 116
            self.match(LSLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(LSLParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(LSLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LSLParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(LSLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(LSLParser.RBRACE, 0)

        def returnType(self):
            return self.getTypedRuleContext(LSLParser.ReturnTypeContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(LSLParser.ParameterListContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LSLParser.StatementContext)
            else:
                return self.getTypedRuleContext(LSLParser.StatementContext,i)


        def getRuleIndex(self):
            return LSLParser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def functionDefinition(self):

        localctx = LSLParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LSLParser.INTEGER_TYPE) | (1 << LSLParser.FLOAT_TYPE) | (1 << LSLParser.STRING_TYPE) | (1 << LSLParser.KEY_TYPE) | (1 << LSLParser.VECTOR_TYPE) | (1 << LSLParser.ROTATION_TYPE) | (1 << LSLParser.LIST_TYPE) | (1 << LSLParser.VOID_TYPE))) != 0):
                self.state = 118
                self.returnType()


            self.state = 121
            self.match(LSLParser.IDENTIFIER)
            self.state = 122
            self.match(LSLParser.LPAREN)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LSLParser.INTEGER_TYPE) | (1 << LSLParser.FLOAT_TYPE) | (1 << LSLParser.STRING_TYPE) | (1 << LSLParser.KEY_TYPE) | (1 << LSLParser.VECTOR_TYPE) | (1 << LSLParser.ROTATION_TYPE) | (1 << LSLParser.LIST_TYPE))) != 0):
                self.state = 123
                self.parameterList()


            self.state = 126
            self.match(LSLParser.RPAREN)
            self.state = 127
            self.match(LSLParser.LBRACE)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LSLParser.T__31) | (1 << LSLParser.INTEGER_TYPE) | (1 << LSLParser.FLOAT_TYPE) | (1 << LSLParser.STRING_TYPE) | (1 << LSLParser.KEY_TYPE) | (1 << LSLParser.VECTOR_TYPE) | (1 << LSLParser.ROTATION_TYPE) | (1 << LSLParser.LIST_TYPE) | (1 << LSLParser.STATE) | (1 << LSLParser.IF) | (1 << LSLParser.WHILE) | (1 << LSLParser.DO) | (1 << LSLParser.FOR) | (1 << LSLParser.RETURN) | (1 << LSLParser.JUMP) | (1 << LSLParser.BREAK) | (1 << LSLParser.CONTINUE) | (1 << LSLParser.TRUE) | (1 << LSLParser.FALSE) | (1 << LSLParser.NULL_KEY))) != 0) or ((((_la - 74)) & ~0x3f) == 0 and ((1 << (_la - 74)) & ((1 << (LSLParser.PLUS - 74)) | (1 << (LSLParser.MINUS - 74)) | (1 << (LSLParser.LOGICAL_NOT - 74)) | (1 << (LSLParser.BITWISE_NOT - 74)) | (1 << (LSLParser.LPAREN - 74)) | (1 << (LSLParser.LBRACE - 74)) | (1 << (LSLParser.LBRACKET - 74)) | (1 << (LSLParser.AT - 74)) | (1 << (LSLParser.INTEGER - 74)) | (1 << (LSLParser.FLOAT - 74)) | (1 << (LSLParser.STRING - 74)) | (1 << (LSLParser.KEY - 74)) | (1 << (LSLParser.IDENTIFIER - 74)))) != 0):
                self.state = 128
                self.statement()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(LSLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lslType(self):
            return self.getTypedRuleContext(LSLParser.LslTypeContext,0)


        def VOID_TYPE(self):
            return self.getToken(LSLParser.VOID_TYPE, 0)

        def getRuleIndex(self):
            return LSLParser.RULE_returnType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnType" ):
                listener.enterReturnType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnType" ):
                listener.exitReturnType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnType" ):
                return visitor.visitReturnType(self)
            else:
                return visitor.visitChildren(self)




    def returnType(self):

        localctx = LSLParser.ReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_returnType)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LSLParser.INTEGER_TYPE, LSLParser.FLOAT_TYPE, LSLParser.STRING_TYPE, LSLParser.KEY_TYPE, LSLParser.VECTOR_TYPE, LSLParser.ROTATION_TYPE, LSLParser.LIST_TYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.lslType()
                pass
            elif token in [LSLParser.VOID_TYPE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(LSLParser.VOID_TYPE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LSLParser.ParameterContext)
            else:
                return self.getTypedRuleContext(LSLParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LSLParser.COMMA)
            else:
                return self.getToken(LSLParser.COMMA, i)

        def getRuleIndex(self):
            return LSLParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = LSLParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.parameter()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LSLParser.COMMA:
                self.state = 141
                self.match(LSLParser.COMMA)
                self.state = 142
                self.parameter()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lslType(self):
            return self.getTypedRuleContext(LSLParser.LslTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(LSLParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(LSLParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(LSLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LSLParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = LSLParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.lslType()
            self.state = 149
            self.match(LSLParser.IDENTIFIER)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LSLParser.ASSIGN:
                self.state = 150
                self.match(LSLParser.ASSIGN)
                self.state = 151
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StateDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(LSLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(LSLParser.RBRACE, 0)

        def DEFAULT(self):
            return self.getToken(LSLParser.DEFAULT, 0)

        def STATE(self):
            return self.getToken(LSLParser.STATE, 0)

        def IDENTIFIER(self):
            return self.getToken(LSLParser.IDENTIFIER, 0)

        def eventHandler(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LSLParser.EventHandlerContext)
            else:
                return self.getTypedRuleContext(LSLParser.EventHandlerContext,i)


        def getRuleIndex(self):
            return LSLParser.RULE_stateDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateDefinition" ):
                listener.enterStateDefinition(self)
